--- a/.gitignore
+++ b/.gitignore
@@ -16,13 +16,14 @@
 .env.test.local
 .env.production.local
 
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # Logs
-
+logs
+*.log
+npm-debug.log*
 
 # Dependency directory
 node_modules
@@ -35,3 +36,4 @@ node_modules
 .idea
 .vscode
 
+*.log
