--- a/.gitignore
+++ b/.gitignore
@@ -15,13 +15,16 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # Logs
-
+logs
+*.log
+npm-debug.log*
 
 # Dependency directory
 node_modules
@@ -33,4 +36,9 @@ node_modules
 .DS_Store
 .idea
 .vscode
+
+*.log
+error.log
+request.log
+
 
